Corrected footer, searchbar commented, corrected navbar on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -33,4 +33,5 @@ body {
   margin-left: 300px;
   margin-right: 300px;
   margin-bottom: 80px;
+  flex-grow: 1;
 }
